# codewars

./: .gitignore  README.md
haskell/: haskell.cabal  isbn10.hs
haskell/src/: Befunge93.hs  MovingZeros.hs  PickPeak.hs  TheLostBeginning.hs
haskell/test/: Befunge93Test.hs  ISBN10Test.hs  MovingZerosTest.hs  PickPeakTest.hs  TestSuite.hs  TheLostBeginningTest.hs
javascript/: curing_arachnophobia.js  latest_clock.js  package-lock.json  package.json  pick_peaks.js  roman_numerals.js  valid_braces.js
javascript/__test__/: latest_clock.test.js  pick_peaks.test.js  roman_numerals.test.js  valid_braces.test.js
