cabal-version:      2.4
name:               kata
version:            0.1.0.0

library
    exposed-modules:  
      PickPeak, 
      ISBN10, 
      MovingZeros,
      TheLostBeginning
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite kata-tests
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             TestSuite.hs
    other-modules:
      ISBN10Test, 
      PickPeakTest, 
      MovingZerosTest,
      TheLostBeginningTest
    build-depends:       base ^>=4.17.2.0
                        , kata
                        , HUnit
    default-language:    Haskell2010
